ktl-505 fix: replace negative z-index to visibility prop

--- a/static/js/com/search/search.scss
+++ b/static/js/com/search/search.scss
@@ -45,7 +45,7 @@ body._no-scroll {
 
   &._hidden {
     opacity: 0;
-    z-index: -1;
+    visibility: hidden;
   }
 
   &:focus {
